tests/baselines/reference/classImplementsClass5.errors.txt
==== tests/cases/compiler/classImplementsClass5.ts (3 errors) ====
    class A {
        private x = 1;
        foo(): number { return 1; }
    }
    class C implements A {
          ~
!!! classImplementsClass5.ts(5,7): error TS2137: Class C declares interface A but does not implement it:
!!! 	Types 'C' and 'A' define property 'x' as private.
        private x = 1;
        foo() {
            return 1;
        }
    }
    
    class C2 extends A {}
    
    var c: C;
    var c2: C2;
    c = c2;
    ~
!!! classImplementsClass5.ts(16,1): error TS2012: Cannot convert 'C2' to 'C':
!!! 	Types 'A' and 'C' define property 'x' as private.
    c2 = c;
    ~~
!!! classImplementsClass5.ts(17,1): error TS2012: Cannot convert 'C' to 'C2':
!!! 	Types 'C' and 'A' define property 'x' as private.